# PROXYRE-ENCLAVE-APP

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.client  Dockerfile.server  Makefile  README.md  Rocket.toml  conventional-commit-examples.md  docker-compose.yml  env-example
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  pr-checks.yml  release.yml  scheduled.yml
docker-enclave/: Dockerfile
src/: command_parser.rs  lib.rs  main.rs  models.rs  protocol_helpers.rs  utils.rs
src/proto/: transform.proto  transform.rs
tests/: integration_client.rs
