[package]
name = "proxy-reencyption-enclave-app"
version = "0.0.1"
authors = ["proxy-reencyption Developers <dev@proxy-reencyption.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
log = "0.4"
nix = "0.15"
byteorder = "1.3"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
ed25519-dalek = "1.0.1"
hex = "0.4"
rsa = "0.6.0"
ecies-ed25519 ="0.5.1"
recrypt = "0.13.1"
protobuf = { version = "3.1.0", features = ["with-bytes"] }
rocket_cors = "0.5.1"
[workspace]
