[package]
name = "proxy_reencyption_enclave_app"
version = "0.0.1"
authors = ["proxy-reencyption Developers <dev@proxy-reencyption.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5"
log = "0.4"
nix = { version = "0.29", features = ["socket", "net"] }
byteorder = "1.5"
rocket = { version = "0.5", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8", features = ["std"] }
rand_core = "0.6"
ed25519-dalek = "2.1"
hex = "0.4"
ecies-ed25519 = "0.5.1"
recrypt = "0.13.1"
protobuf = { version = "3.5", features = ["with-bytes"] }
tokio = { version = "1.0", features = ["full"] }
signature = "2.2"

[dev-dependencies]
tempfile = "3.12"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
nix = { version = "0.29", features = ["socket", "net", "signal", "process"] }

[package.metadata.cargo-udeps.ignore]
normal = ["rsa"]

[workspace]
